# sync_with_poetry

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  LICENSE  README.md  file.txt  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  tests.yml
sync_with_poetry/: db.py  swp.py
tests/: helpers.py  test_frozen.py  test_lock_parser.py  test_mapping.py  test_meta.py  test_sync_repos.py
