[tool.poetry]
authors = ["Andrea Mignone <andrea.mignone@virgilio.it>"]
description = "Sync .pre-commit-config.yaml repos starting from poetry.lock"
name = "sync_with_poetry"
version = "0.2.0"

[tool.poetry.dependencies]
python = "^3.6.1"

PyYAML = "^6.0"
tomlkit = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", python = "^3.6.2"}
coverage = [
  {extras = [
    "toml",
  ], version = "^6.0", python = ">=3.6,<3.7"},
  {extras = [
    "toml",
  ], version = ">=6.5", python = ">=3.7"},
]
flake8 = "^5.0.4"
mypy = "^0.971"
pre-commit = {version = "^2.15.0", python = "^3.6.1"}
pytest = "^6.2"
pytest-cov = "^4.0.0"
types-PyYAML = "^6.0.1"

[tool.poetry.scripts]
swp = "sync_with_poetry.swp:main"

[tool.pytest.ini_options]
addopts = "-svv"
testpaths = ["tests"]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
include = '\.pyi?$'
line-length = 88

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
files = ["**/*.py"]
namespace_packages = true
show_error_codes = true

[tool.isort]
profile = "black"
src_paths = ["sync_with_poetry", "tests"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
